--- a/index.html
+++ b/index.html
@@ -66,14 +66,68 @@
 
         <div class="third-one">
             <div class="third-two">
-
+                <h3>Choose Your Destination</h3>
+                <p>A destination is a specific place or location to which a person or thing is intended to reach or arrive. It often conveys a sense of purposeful travel or journey, whether for leisure, business, or other reasons.</p>
             </div>
-            <div class="third-three">
+        
+            <div class="places">
+                <div class="third-three">
+                    <img src="Images/3.png" alt="">
+                    <img src="Images/4.png" alt="">
+                </div>
+                <div class="third-three">
+                    <img src="Images/5.png" alt="">
+                    <img src="Images/6.png" alt="">
+                    <img src="Images/7.png" alt="">
+                </div>
+                <div class="third-three">
+                    <img src="Images/8.png" alt="">
+                    <img src="Images/9.png" alt="">
+                </div>
+            </div>
+        </div>
 
+        <div class="fourth">
+            <div class="fourth-one">
+                <h3>Why Choose Us</h3>
+                <p>Destinations can vary widely, encompassing geographic locations like cities, countries, or landmarks, as well as metaphorical destinations such as goals or milestones.</p>
+            </div>
+            <div class="fourth-one-main">
+                <div class="fourth-two">
+                    <img src="Images/home.jpg" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Choosing a destination is a key element in planning travel or setting objectives,Choosing a destination is a key element in planning travel or setting objectives, </p>
+                </div>
+                <div class="fourth-three">
+                    <img src="Images/map.jpg" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Choosing a destination is a key element in planning travel or setting objectives,Choosing a destination is a key element in planning travel or setting objectives, </p>
+                </div>
+            </div>
+            <div class="fourth-fourth">
+                <img src="Images/offer.jpg" alt="">
+                <h3>Best Price Guarantee</h3>
+                <p> it adds significance and direction to the overall experience or pursuit.Choosing a destination is a key element in planning travel or setting objectives, </p>
             </div>
         </div>
 
 
+            <div class="newsletter">
+                <div class="form-fill">
+                    <h3>newsletter</h3>
+                    <p>Ultimately, a destination represents the endpoint or goal of a journey, shaping the experiences and memories associated with the arrival.</p>
+                    <input type="text" placeholder="Enter Your Name"><br>
+                    <input type="email"placeholder="Enter Your E-Mail"><br>
+                    <button class="btn-primary">Subscribe</button>
+                </div>
+                <div class="form-image">
+                    <img src="Images/10.png" alt="">
+                </div>
+                <div class="save">
+                    <p>Travel.Com</p>
+                    <h3>Save up to 70%</h3>
+                </div>
+            </div>
     </main>
 
 
@@ -87,9 +141,14 @@
                 </div>
                 <div class="last-p">
                     <p> and partake in traditions that have been passed down through generations</p>
-
                 </div>
-                <p>&copy All Rights reserved by Aus shakir ahmed evan </p>
+                <div class="last-one-icon">
+                    <img src="Images/Facebook.png" alt="">
+                    <img src="Images/Instagram.png" alt="">
+                    <img src="Images/Linkedin.png" alt="">
+                </div>
+                <hr>
+                <p class="last-foot">&copy All Rights reserved by Aus shakir ahmed evan </p>
             </div>
 
 
