--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                         <li>Blog</li>
                         <li>Contact</li>
                     </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
