--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
             </div>
         
             <div class="places">
-                <div class="third-three">
+                <div class="third-three-one">
                     <img src="Images/3.png" alt="">
                     <img src="Images/4.png" alt="">
                 </div>
-                <div class="third-three">
+                <div class="third-three-two">
                     <img src="Images/5.png" alt="">
                     <img src="Images/6.png" alt="">
                     <img src="Images/7.png" alt="">
                 </div>
-                <div class="third-three">
+                <div class="third-three-three">
                     <img src="Images/8.png" alt="">
                     <img src="Images/9.png" alt="">
                 </div>
