--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="menu">
                     <ul class="links">
-                        <li class="rong">Home</li>
+                        <li style="color:#ff5400">Home</li>
                         <li>Packages</li>
                         <li>Testimonial</li>
                         <li>Blog</li>
